shopify/hercules/openshift/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hercules-shopify-api
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: hercules-shopify-api-tls
spec:
  selector:
    app: hercules-shopify-api
  ports:
    - name: https
      port: 8443
      targetPort: 8443
