shopify/hercules/openshift/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: hercules-shopify-api
spec:
  path: /webhooks/shopify
  to:
    kind: Service
    name: hercules-shopify-api
  port:
    targetPort: https
  tls:
    termination: reencrypt
    insecureEdgeTerminationPolicy: Redirect
